--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+body{
+    background-color: whitesmoke !important;
+    font-family: 'Oswald', sans-serif;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+    margin-top: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grid {
+    margin: 0 2% !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.infected {
+    border-bottom: 10px solid rgba(0, 0, 255, 0.5);
 }
 
-.App-link {
-  color: #61dafb;
+.recovered {
+    border-bottom: 10px solid rgba(0, 255, 0, 0.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.deaths {
+    border-bottom: 10px solid rgba(255, 0, 0, 0.5);
 }
